# ztd

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: conventions.md  todo.md
examples/: CMakeLists.txt
examples/allocators/: CMakeLists.txt  allocators.cpp
examples/fixed_buffer_allocator/: CMakeLists.txt  fixed_buffer_allocator.cpp
examples/fizz_buzz/: CMakeLists.txt  fizz_buzz.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/hi_lo/: CMakeLists.txt  hi_lo.cpp
include/: zta.h  ztd.h
include/zta/: ascii.h  builtin.h  debug.h  enum_type.h  error.h  fmt.h  fs.h  heap.h  io.h  math.h  mem.h  posix.h  random.h  result.h  types.h  unicode.h
include/zta/fs/: file.h
include/zta/heap/: debug_allocator.h  fixed_buffer_allocator.h  page_allocator.h
include/zta/io/: writer.h
include/zta/mem/: alignment.h  allocator.h
include/ztd/: ascii.h  builtin.h  debug.h  enum_type.h  error.h  fmt.h  fs.h  heap.h  io.h  math.h  mem.h  posix.h  random.h  result.h  types.h  unicode.h
include/ztd/fs/: file.h
include/ztd/heap/: debug_allocator.h  fixed_buffer_allocator.h  page_allocator.h
include/ztd/io/: writer.h
include/ztd/mem/: alignment.h  allocator.h
src/: ascii.cpp  debug.cpp  fmt.cpp  io.cpp  posix.cpp  unicode.cpp
src/fs/: file.cpp
src/io/: writer.cpp
